add config for backend